fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,25 @@ body {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+    width: 6px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 4px rgba(0, 136, 255, 0.2);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 149, 255, 0.5);
+    outline: none;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+
 main {
     overflow-y: auto;
 }
